<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main">

    <TextView
        android:id="@+id/addtransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"
        android:text="@string/Add_Transaction"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0CF" />

    <TextView
        android:id="@+id/transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addtransaction"
        android:layout_marginTop="4dp"
        android:text="@string/transactions"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:textColor="#0CF"/>

    <Spinner
        android:id="@+id/transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/transactions"
        android:layout_marginTop="9dp"
        android:textColor="#0CF" />

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/transaction_type"
        android:layout_alignBottom="@+id/transaction_type"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/transaction_type"
        android:ems="10"
        android:inputType="number"
        android:textColor="#0CF"
        android:hint="@string/edit_amount" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_amount"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/edit_amount"
        android:text="@string/tag"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0CF" />

    <AutoCompleteTextView
        android:id="@+id/edit_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tag"
        android:layout_alignLeft="@+id/edit_amount"
        android:ems="10"
        android:hint="@string/edit_tag"
        android:textColor="#0CF" />

    <Button
        android:text="@string/category_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/category_tag"
        android:layout_alignParentLeft="true"
        android:ems="10"
        style="@android:style/Widget.Material.Light.Button.Small"
        android:textColor="#0CF"
        android:layout_below="@+id/tag"
        android:layout_alignRight="@+id/addnewaccount" />

    <TextView
        android:id="@+id/account_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tag"
        android:layout_marginTop="60dp"
        android:text="@string/account_type"
        tools:context=".MainActivity" 
        android:textColor="#0CF" />

     <Spinner
        android:id="@+id/edit_cash"
        android:layout_width="wrap_content"
        android:layout_height="45dp"

         android:layout_alignBottom="@+id/account_type"
         android:layout_alignLeft="@id/edit_tag"
        android:hint="@string/edit_cash" 
        android:textColor="#0CF"/>





    <TextView
        android:id="@+id/view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/account_type"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        tools:context=".MainActivity"
        android:textColor="#0CF" />
    <TextView
        android:id="@+id/myViewDate"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginLeft="30dp"
        android:layout_alignBaseline="@+id/view_date"

        android:layout_toRightOf="@+id/view_date"
        android:text="@string/mydatedisplay"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0CF"/>

    <Button
        android:id="@+id/dateupdate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:text="@string/dateupdate"
        android:textColor="#ffffff"
        android:background="@drawable/btn_green"
        android:layout_alignBaseline="@+id/view_date"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/myViewDate" />




        <TextView
            android:id="@+id/allaccounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/view_date"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/allaccounts"
            tools:context=".MainActivity" 
            android:textColor="#0CF"/>
        <TextView
            android:id="@+id/allaccountsvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/allaccounts"
            android:layout_marginTop="5dp"
            android:text="@string/allaccountsvalue"
            tools:context=".MainActivity"
            android:textColor="#0CF" />

        


        <Button
        android:id="@+id/addnewaccount"    
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
            android:text="@string/addnewaccount"
        android:textColor="#ffffff" 
        android:background="@drawable/btn_green"
            android:layout_alignBottom="@+id/allaccountsvalue"
            android:layout_toRightOf="@+id/allaccountsvalue"
            android:layout_marginLeft="45dp"/>

         


    <Button
        android:id="@+id/savebutton"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/btn_green"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:layout_alignBaseline="@+id/allaccountsvalue"
        android:layout_toRightOf="@+id/addnewaccount"
        android:layout_marginLeft="34dp"/>

    <Button
        android:id="@+id/navigationmenu"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_green"
        android:text="@string/navigationmenu"
        android:textSize="14dp"
        android:textColor="#ffffff"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/allaccountsvalue"
        android:layout_marginTop="20dp"/>




</RelativeLayout>
